src/main/java/io/zenmake/deepmutate/gen/DeepMutateParser.java
// Generated from java-escape by ANTLR 4.11.1
package io.zenmake.deepmutate.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DeepMutateParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FROM=1, MUTATE=2, MATCH=3, WHERE=4, SET=5, INSERT=6, REPLACE=7, DEFINE=8, 
		TYPE=9, ANALYZE=10, REPORT=11, CONSOLE=12, URI=13, LANG=14, DIR=15, PATH=16, 
		FILE=17, CODE=18, OUTPUT=19, DATASTORE=20, DB=21, USER=22, PASS=23, ACTIVE=24, 
		BUILD=25, RIGHT_ARROW=26, SEMICOLON=27, PIPE=28, QM=29, COLON=30, RANGE=31, 
		COMMA=32, LRB=33, RRB=34, LSB=35, RSB=36, LCB=37, RCB=38, AND=39, OR=40, 
		NOT=41, EQ=42, NE=43, LT=44, LTE=45, GT=46, GTE=47, PLUS=48, MINUS=49, 
		MUL=50, DIV=51, MOD=52, BIT_AND=53, SHIFT_LEFT=54, SHIFT_RIGHT=55, ASSIGN=56, 
		SCOPE=57, ACCESS=58, REGEX_MATCH=59, REGEX_NON_MATCH=60, IDENTIFIER=61, 
		TEXT=62, STRING_LITERAL=63, DOUBLE_QUOTED_STRING_LITERAL=64, BACKSTICK_STRING_LITERAL=65, 
		BLOCK_COMMENT=66, LINE_COMMENT=67, WHITE_SPACE=68;
	public static final int
		RULE_parse = 0, RULE_projectDecl = 1, RULE_functionDecl = 2, RULE_mutationDecl = 3, 
		RULE_matchStmt = 4, RULE_whereStmt = 5, RULE_setStmt = 6, RULE_insertStmt = 7, 
		RULE_functionId = 8, RULE_mutationId = 9, RULE_pattern = 10, RULE_inputConf = 11, 
		RULE_projectConf = 12, RULE_outputConf = 13, RULE_mutationConf = 14, RULE_conf = 15, 
		RULE_strList = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "projectDecl", "functionDecl", "mutationDecl", "matchStmt", 
			"whereStmt", "setStmt", "insertStmt", "functionId", "mutationId", "pattern", 
			"inputConf", "projectConf", "outputConf", "mutationConf", "conf", "strList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'FROM'", "'MUTATE'", "'MATCH'", "'WHERE'", "'SET'", "'INSERT'", 
			"'REPLACE'", null, "'TYPE'", "'ANALYZE'", "'REPORT'", "'CONSOLE'", "'URI'", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"'->'", "';'", "'|'", "'?'", "':'", "'..'", "','", "'('", "')'", "'['", 
			"']'", "'{'", "'}'", "'&&'", "'||'", "'!'", "'=='", "'!='", "'<'", "'<='", 
			"'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'<<'", "'>>'", 
			"'='", "'::'", "'.'", "'=~'", "'!~'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FROM", "MUTATE", "MATCH", "WHERE", "SET", "INSERT", "REPLACE", 
			"DEFINE", "TYPE", "ANALYZE", "REPORT", "CONSOLE", "URI", "LANG", "DIR", 
			"PATH", "FILE", "CODE", "OUTPUT", "DATASTORE", "DB", "USER", "PASS", 
			"ACTIVE", "BUILD", "RIGHT_ARROW", "SEMICOLON", "PIPE", "QM", "COLON", 
			"RANGE", "COMMA", "LRB", "RRB", "LSB", "RSB", "LCB", "RCB", "AND", "OR", 
			"NOT", "EQ", "NE", "LT", "LTE", "GT", "GTE", "PLUS", "MINUS", "MUL", 
			"DIV", "MOD", "BIT_AND", "SHIFT_LEFT", "SHIFT_RIGHT", "ASSIGN", "SCOPE", 
			"ACCESS", "REGEX_MATCH", "REGEX_NON_MATCH", "IDENTIFIER", "TEXT", "STRING_LITERAL", 
			"DOUBLE_QUOTED_STRING_LITERAL", "BACKSTICK_STRING_LITERAL", "BLOCK_COMMENT", 
			"LINE_COMMENT", "WHITE_SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DeepMutateParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DeepMutateParser.EOF, 0); }
		public List<ProjectDeclContext> projectDecl() {
			return getRuleContexts(ProjectDeclContext.class);
		}
		public ProjectDeclContext projectDecl(int i) {
			return getRuleContext(ProjectDeclContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepMutateParserVisitor ) return ((DeepMutateParserVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FROM) {
				{
				{
				setState(34);
				projectDecl();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(40);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProjectDeclContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(DeepMutateParser.FROM, 0); }
		public List<TerminalNode> LRB() { return getTokens(DeepMutateParser.LRB); }
		public TerminalNode LRB(int i) {
			return getToken(DeepMutateParser.LRB, i);
		}
		public InputConfContext inputConf() {
			return getRuleContext(InputConfContext.class,0);
		}
		public List<TerminalNode> RRB() { return getTokens(DeepMutateParser.RRB); }
		public TerminalNode RRB(int i) {
			return getToken(DeepMutateParser.RRB, i);
		}
		public TerminalNode MUTATE() { return getToken(DeepMutateParser.MUTATE, 0); }
		public ProjectConfContext projectConf() {
			return getRuleContext(ProjectConfContext.class,0);
		}
		public TerminalNode OUTPUT() { return getToken(DeepMutateParser.OUTPUT, 0); }
		public OutputConfContext outputConf() {
			return getRuleContext(OutputConfContext.class,0);
		}
		public TerminalNode LCB() { return getToken(DeepMutateParser.LCB, 0); }
		public TerminalNode RCB() { return getToken(DeepMutateParser.RCB, 0); }
		public List<FunctionDeclContext> functionDecl() {
			return getRuleContexts(FunctionDeclContext.class);
		}
		public FunctionDeclContext functionDecl(int i) {
			return getRuleContext(FunctionDeclContext.class,i);
		}
		public ProjectDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_projectDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).enterProjectDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).exitProjectDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepMutateParserVisitor ) return ((DeepMutateParserVisitor<? extends T>)visitor).visitProjectDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProjectDeclContext projectDecl() throws RecognitionException {
		ProjectDeclContext _localctx = new ProjectDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_projectDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(FROM);
			setState(43);
			match(LRB);
			setState(44);
			inputConf();
			setState(45);
			match(RRB);
			setState(46);
			match(MUTATE);
			setState(47);
			match(LRB);
			setState(48);
			projectConf();
			setState(49);
			match(RRB);
			setState(50);
			match(OUTPUT);
			setState(51);
			match(LRB);
			setState(52);
			outputConf();
			setState(53);
			match(RRB);
			setState(54);
			match(LCB);
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEFINE) {
				{
				{
				setState(55);
				functionDecl();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(DeepMutateParser.DEFINE, 0); }
		public FunctionIdContext functionId() {
			return getRuleContext(FunctionIdContext.class,0);
		}
		public TerminalNode LCB() { return getToken(DeepMutateParser.LCB, 0); }
		public TerminalNode RCB() { return getToken(DeepMutateParser.RCB, 0); }
		public List<MutationDeclContext> mutationDecl() {
			return getRuleContexts(MutationDeclContext.class);
		}
		public MutationDeclContext mutationDecl(int i) {
			return getRuleContext(MutationDeclContext.class,i);
		}
		public FunctionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).enterFunctionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).exitFunctionDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepMutateParserVisitor ) return ((DeepMutateParserVisitor<? extends T>)visitor).visitFunctionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclContext functionDecl() throws RecognitionException {
		FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(DEFINE);
			setState(64);
			functionId();
			setState(65);
			match(LCB);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MATCH || _la==LSB) {
				{
				{
				setState(66);
				mutationDecl();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MutationDeclContext extends ParserRuleContext {
		public MatchStmtContext matchStmt() {
			return getRuleContext(MatchStmtContext.class,0);
		}
		public List<TerminalNode> LSB() { return getTokens(DeepMutateParser.LSB); }
		public TerminalNode LSB(int i) {
			return getToken(DeepMutateParser.LSB, i);
		}
		public MutationIdContext mutationId() {
			return getRuleContext(MutationIdContext.class,0);
		}
		public List<TerminalNode> RSB() { return getTokens(DeepMutateParser.RSB); }
		public TerminalNode RSB(int i) {
			return getToken(DeepMutateParser.RSB, i);
		}
		public MutationConfContext mutationConf() {
			return getRuleContext(MutationConfContext.class,0);
		}
		public WhereStmtContext whereStmt() {
			return getRuleContext(WhereStmtContext.class,0);
		}
		public List<SetStmtContext> setStmt() {
			return getRuleContexts(SetStmtContext.class);
		}
		public SetStmtContext setStmt(int i) {
			return getRuleContext(SetStmtContext.class,i);
		}
		public List<InsertStmtContext> insertStmt() {
			return getRuleContexts(InsertStmtContext.class);
		}
		public InsertStmtContext insertStmt(int i) {
			return getRuleContext(InsertStmtContext.class,i);
		}
		public MutationDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mutationDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).enterMutationDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).exitMutationDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepMutateParserVisitor ) return ((DeepMutateParserVisitor<? extends T>)visitor).visitMutationDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MutationDeclContext mutationDecl() throws RecognitionException {
		MutationDeclContext _localctx = new MutationDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mutationDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(74);
				match(LSB);
				setState(75);
				mutationId();
				setState(76);
				match(RSB);
				}
				break;
			}
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LSB) {
				{
				setState(80);
				match(LSB);
				setState(81);
				mutationConf();
				setState(82);
				match(RSB);
				}
			}

			setState(86);
			matchStmt();
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(87);
				whereStmt();
				}
			}

			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET:
				{
				setState(91); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(90);
					setStmt();
					}
					}
					setState(93); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SET );
				}
				break;
			case INSERT:
				{
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(95);
					insertStmt();
					}
					}
					setState(98); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==INSERT );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchStmtContext extends ParserRuleContext {
		public TerminalNode MATCH() { return getToken(DeepMutateParser.MATCH, 0); }
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public TerminalNode COLON() { return getToken(DeepMutateParser.COLON, 0); }
		public TerminalNode LRB() { return getToken(DeepMutateParser.LRB, 0); }
		public TerminalNode RRB() { return getToken(DeepMutateParser.RRB, 0); }
		public MatchStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).enterMatchStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).exitMatchStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepMutateParserVisitor ) return ((DeepMutateParserVisitor<? extends T>)visitor).visitMatchStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchStmtContext matchStmt() throws RecognitionException {
		MatchStmtContext _localctx = new MatchStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_matchStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(MATCH);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(103);
				match(COLON);
				}
			}

			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LRB) {
				{
				setState(106);
				match(LRB);
				}
			}

			setState(109);
			pattern();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RRB) {
				{
				setState(110);
				match(RRB);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhereStmtContext extends ParserRuleContext {
		public TerminalNode WHERE() { return getToken(DeepMutateParser.WHERE, 0); }
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public TerminalNode COLON() { return getToken(DeepMutateParser.COLON, 0); }
		public TerminalNode LRB() { return getToken(DeepMutateParser.LRB, 0); }
		public TerminalNode RRB() { return getToken(DeepMutateParser.RRB, 0); }
		public WhereStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whereStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).enterWhereStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).exitWhereStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepMutateParserVisitor ) return ((DeepMutateParserVisitor<? extends T>)visitor).visitWhereStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhereStmtContext whereStmt() throws RecognitionException {
		WhereStmtContext _localctx = new WhereStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_whereStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(WHERE);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(114);
				match(COLON);
				}
			}

			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LRB) {
				{
				setState(117);
				match(LRB);
				}
			}

			setState(120);
			pattern();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RRB) {
				{
				setState(121);
				match(RRB);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetStmtContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(DeepMutateParser.SET, 0); }
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public TerminalNode COLON() { return getToken(DeepMutateParser.COLON, 0); }
		public TerminalNode LRB() { return getToken(DeepMutateParser.LRB, 0); }
		public TerminalNode RRB() { return getToken(DeepMutateParser.RRB, 0); }
		public SetStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).enterSetStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).exitSetStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepMutateParserVisitor ) return ((DeepMutateParserVisitor<? extends T>)visitor).visitSetStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetStmtContext setStmt() throws RecognitionException {
		SetStmtContext _localctx = new SetStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_setStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(SET);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(125);
				match(COLON);
				}
			}

			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LRB) {
				{
				setState(128);
				match(LRB);
				}
			}

			setState(131);
			pattern();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RRB) {
				{
				setState(132);
				match(RRB);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InsertStmtContext extends ParserRuleContext {
		public TerminalNode INSERT() { return getToken(DeepMutateParser.INSERT, 0); }
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public TerminalNode COLON() { return getToken(DeepMutateParser.COLON, 0); }
		public TerminalNode LRB() { return getToken(DeepMutateParser.LRB, 0); }
		public TerminalNode RRB() { return getToken(DeepMutateParser.RRB, 0); }
		public InsertStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insertStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).enterInsertStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).exitInsertStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepMutateParserVisitor ) return ((DeepMutateParserVisitor<? extends T>)visitor).visitInsertStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InsertStmtContext insertStmt() throws RecognitionException {
		InsertStmtContext _localctx = new InsertStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_insertStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(INSERT);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(136);
				match(COLON);
				}
			}

			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LRB) {
				{
				setState(139);
				match(LRB);
				}
			}

			setState(142);
			pattern();
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RRB) {
				{
				setState(143);
				match(RRB);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionIdContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DeepMutateParser.IDENTIFIER, 0); }
		public FunctionIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).enterFunctionId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).exitFunctionId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepMutateParserVisitor ) return ((DeepMutateParserVisitor<? extends T>)visitor).visitFunctionId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionIdContext functionId() throws RecognitionException {
		FunctionIdContext _localctx = new FunctionIdContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functionId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MutationIdContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(DeepMutateParser.IDENTIFIER, 0); }
		public MutationIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mutationId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).enterMutationId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).exitMutationId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepMutateParserVisitor ) return ((DeepMutateParserVisitor<? extends T>)visitor).visitMutationId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MutationIdContext mutationId() throws RecognitionException {
		MutationIdContext _localctx = new MutationIdContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_mutationId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PatternContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(DeepMutateParser.STRING_LITERAL, 0); }
		public PatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).enterPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DeepMutateParserListener ) ((DeepMutateParserListener)listener).exitPattern(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeepMutateParserVisitor ) return ((DeepMutateParserVisitor<? extends T>)visitor).visitPattern(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PatternContext pattern() throws RecognitionException {
		PatternContext _localctx = new PatternContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_pattern);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
